--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
-    "slideout": "^1.0.1"
+    "slideout": "^1.0.1",
+    "web3": "^1.0.0-beta.33"
   },
   "scripts": {
     "start": "react-scripts start",
