--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
     "slideout": "^1.0.1",
+    "socket.io-client": "^2.2.0",
     "web3": "^1.0.0-beta.33"
   },
   "scripts": {
